'edit this file to generate a class diagram'

@startuml
set namespaceSeparator ::

class "timesheet_app::main.dart::MyApp" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "timesheet_app::main.dart::MyApp"

class "timesheet_app::pages::auth_page.dart::AuthPage" {
  +Widget build()
}

"flutter::src::widgets::framework.dart::StatelessWidget" <|-- "timesheet_app::pages::auth_page.dart::AuthPage"

class "timesheet_app::pages::home_page.dart::HomePage" {
  +State<HomePage> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "timesheet_app::pages::home_page.dart::HomePage"

class "timesheet_app::pages::home_page.dart::_HomePageState" {
  +User user
  -Position? _currentLocation
  +bool servicePermission
  +LocationPermission permission
  -String _currentAddress
  -String _currentDuration
  +String titleOfTab
  +int seconds
  +int minutes
  +int hours
  +String digitSeconds
  +String digitMinutes
  +String digitHours
  +Timer? timer
  +bool started
  +List<dynamic> shifts
  +int currentPageIndex
  +String placeNameStr
  +TextEditingController newPlaceController
  +TextEditingController newAddressController
  +TextEditingController newDateController
  +TextEditingController newStartTimeController
  +TextEditingController newEndTimeController
  +String pickedDate
  +String startTime
  +String endTime
  +TimeOfDay startTimeDialog
  +TimeOfDay endTimeDialog
  +void signUserOut()
  -Future<Position> _getCurrentLocation()
  -dynamic _getAddressFromCoordinates()
  +void stopTimer()
  +void reset()
  +void timerDuration()
  +void startTimer()
  +void saveTracker()
  +void openPlaceDialog()
  +void savePlaceDialog()
  +void addShiftDialog()
  -Future<void> _selectDate()
  -Future<void> _selectTime()
  +void clear()
  +void cancel()
  +TimeOfDay calculateTimeDuration()
  +void saveDialog()
  +Widget build()
}

"timesheet_app::pages::home_page.dart::_HomePageState" o-- "firebase_auth::firebase_auth.dart::User"
"timesheet_app::pages::home_page.dart::_HomePageState" o-- "geolocator_platform_interface::src::enums::location_permission.dart::LocationPermission"
"timesheet_app::pages::home_page.dart::_HomePageState" o-- "dart::async::Timer"
"timesheet_app::pages::home_page.dart::_HomePageState" o-- "flutter::src::widgets::editable_text.dart::TextEditingController"
"timesheet_app::pages::home_page.dart::_HomePageState" o-- "flutter::src::material::time.dart::TimeOfDay"
"flutter::src::widgets::framework.dart::State" <|-- "timesheet_app::pages::home_page.dart::_HomePageState"

class "timesheet_app::pages::login_or_register_page.dart::LoginOrRegisterPage" {
  +State<LoginOrRegisterPage> createState()
}

"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "timesheet_app::pages::login_or_register_page.dart::LoginOrRegisterPage"

class "timesheet_app::pages::login_or_register_page.dart::_LoginOrRegisterPageState" {
  +bool showLoginPage
  +void togglePages()
  +Widget build()
}

"flutter::src::widgets::framework.dart::State" <|-- "timesheet_app::pages::login_or_register_page.dart::_LoginOrRegisterPageState"

class "timesheet_app::pages::login_page.dart::LoginPage" {
  +dynamic Function()? onTap
  +State<LoginPage> createState()
}

"timesheet_app::pages::login_page.dart::LoginPage" o-- "null::dynamic Function()"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "timesheet_app::pages::login_page.dart::LoginPage"

class "timesheet_app::pages::login_page.dart::_LoginPageState" {
  +TextEditingController emailController
  +TextEditingController passwordController
  +void signUserIn()
  +void showErrorMessage()
  +Widget build()
}

"timesheet_app::pages::login_page.dart::_LoginPageState" o-- "flutter::src::widgets::editable_text.dart::TextEditingController"
"flutter::src::widgets::framework.dart::State" <|-- "timesheet_app::pages::login_page.dart::_LoginPageState"

class "timesheet_app::pages::register_page.dart::RegisterPage" {
  +dynamic Function()? onTap
  +State<RegisterPage> createState()
}

"timesheet_app::pages::register_page.dart::RegisterPage" o-- "null::dynamic Function()"
"flutter::src::widgets::framework.dart::StatefulWidget" <|-- "timesheet_app::pages::register_page.dart::RegisterPage"

class "timesheet_app::pages::register_page.dart::_RegisterPageState" {
  +TextEditingController emailController
  +TextEditingController passwordController
  +TextEditingController confirmedPasswordController
  +void signUserIn()
  +void showErrorMessage()
  +Widget build()
}

"timesheet_app::pages::register_page.dart::_RegisterPageState" o-- "flutter::src::widgets::editable_text.dart::TextEditingController"
"flutter::src::widgets::framework.dart::State" <|-- "timesheet_app::pages::register_page.dart::_RegisterPageState"


@enduml